# game2d

./: .gitignore  Cargo.toml  README.md
src/: _main_template.rs  main.rs
src/animations/: animation.rs  manager.rs  mod.rs
src/game/: common.rs  game.rs  inputs.rs  mod.rs  sprites.rs  types.rs
src/game2d/: _main_template.rs  lib.rs
src/game2d/animations/: animation.rs  manager.rs
src/game2d/game/: game.rs
src/game2d/graphics/: color.rs  images.rs
src/graphics/: color.rs  fonts.rs  graphics.rs  images.rs  mod.rs
src/inputs/: keyboard.rs  mouse.rs
