[package]
name = "game2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["unsafe_textures", "image", "ttf", "gfx"]

[dependencies]
chrono = "0.4"
strum = "0.17.1"
strum_macros = "0.17.1"